--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,1 +1,5 @@
-$primaryColor: #000;
+$primary-color: #52B851;
+$primary-color-dark: #28b485;
+$primary-color-light: #55c57a;
+$text-color: #3B3D40;
+
