--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,13 @@
 @import '../../assets/styles/variables.scss';
 
-#header {
+.Header {
     height: 80px;
     width: 100%;
-    background-image: linear-gradient(to bottom, $primary-color-dark, $primary-color-light)
+    background-image: linear-gradient(to bottom, $primary-color-dark, $primary-color-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10%;
 }
 
 #system-name {
