--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
 
 /* default font size of the browser is 16px */
 html {
-  font-size: 62.5%; /* 62.5% is equivalent to 10px */
+  /* 62.5% is equivalent to 10px */
+  /* font-size: 62.5%;  */
 }
 
 body {
