--- a/src/components/Header/HeaderNav/HeaderNav.scss
+++ b/src/components/Header/HeaderNav/HeaderNav.scss
@@ -3,7 +3,7 @@
     color: #fff !important;
     font-size: 0.9rem;
     font-weight: 600;
-    padding-left: 5rem;
+    padding-left: 5rem !important;
     text-decoration: none;
 }
 
